--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rezeplayer",
   "author": "rishabnotofound",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Professional HLS/MP4 video player with subtitle support",
   "homepage": "https://github.com/rishabnotfound/RezePlayer",
   "main": "dist/rezeplayer.umd.js",
@@ -132,6 +132,7 @@
     "handlebars": "^4.7.8",
     "jsdom": "^23.2.0",
     "postcss": "^8.5.3",
+    "postcss-prefix-selector": "^2.1.1",
     "postcss-rtl": "^2.0.0",
     "postcss-rtlcss": "^4.0.9",
     "prettier": "^3.5.3",
