--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rezeplayer",
   "author": "rishabnotofound",
-  "version": "1.1.6",
+  "version": "1.1.9",
   "description": "Professional HLS/MP4 video player with subtitle support",
   "homepage": "https://github.com/rishabnotfound/RezePlayer",
   "main": "dist/rezeplayer.umd.js",
@@ -16,6 +16,7 @@
   },
   "files": [
     "dist",
+    "!dist/reze",
     "README.md"
   ],
   "keywords": [
